# ChangeLog for net-nntp/spotweb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Aug 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
  spotweb-9999.ebuild, files/create_db.sql:
  Fixes: Should now install again. More work is needed so use this with
  caution!

*spotweb-9999 (21 Nov 2012)

  21 Nov 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +spotweb-9999.ebuild, +files/.htaccess, +files/create_db.sql,
  +files/postinstall-en.txt, +metadata.xml:
  Initial commit from bug #439462 created and requested by Russell York.
