@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  spotweb-9999.ebuild, files/postinstall-en.txt:
+  Spotweb fixes.
+
   23 Aug 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
   spotweb-9999.ebuild, files/create_db.sql:
   Fixes: Should now install again. More work is needed so use this with
